--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>jqr</name>
 	<description>Demo project for Spring Boot</description>
-
+	<packaging>jar</packaging>
 	<repositories>
 		<repository>
 			<id>aliyun</id>
