--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,14 @@ server:
     context-path: /jqr
 spring:
   datasource:
-    url: jdbc:mysql://118.25.88.251:3306/jqr?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/jqr?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
     username: root
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
+    tomcat:
+      max-active: 2000
+    hikari:
+      max-lifetime: 1200000
   jpa:
     generate-ddl: true
     show-sql: true
